maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:43: error: value leftFollowerMode is not a member of Unit
possible cause: maybe a semicolon is missing before `value leftFollowerMode'?
                } leftFollowerMode(); state = 0;
                  ^